<resources>
    <string name="app_name">TreasureHunt_front_end</string>
    <string name="title_activity_maps">Map</string>
    <string name="congratulations_you_won">Congratulations you WON!</string>
    <string name="test">test</string>
    <string name="you_found_the_treasure">You found the Treasure</string>
    <string name="congratulations">Congratulations</string>
    <string name="register_here">Register here</string>
    <string name="registration_rules">Registration rules</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login_here">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="id">id</string>
    <string name="play">Play</string>
    <string name="treasure_hunt">Treasure Hunt</string>
    <string name="enter_latitude">enter latitude</string>
    <string name="enter_latitude1">Enter latitude</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_next_location_hint">Enter next location hint</string>
    <string name="insert_location_to_the_game">Insert Location to the game</string>
    <string name="save_game">Save Game</string>
    <string name="documentation">Documentation</string>
    <string name="create_question_for_this_location">Create question for this location</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="points">Points</string>
    <string name="Complete" />
    <string name="complete">Complete</string>
    <string name="add_question">Add question</string>
    <string name="next_location_title">Next location title</string>
    <string name="initialize_a_game">Initialize a game</string>
    <string name="create_a_game">Create a game</string>
    <string name="game_id">Game id</string>
    <string name="game_title">Game title</string>
    <string name="enter_the_location_you_want">Enter the location you want</string>
    <string name="generateid">GenerateId</string>
    <string name="generate_id">Generate ID</string>
    <string name="add_location">Add location</string>
    <string name="admins_hall">Admins Hall</string>
    <string name="create_game">Create game</string>
    <string name="add_locations_to_a_game">Add locations to a Game</string>
    <string name="add_questin_to_storage">Add questin to Storage</string>
    <string name="store_a_question">Store a question</string>
    <string name="username1">Username :</string>
    <string name="role">Role :</string>
    <string name="id1">id :</string>
    <string name="store_question">Store Question</string>
    <string name="enter_the_question">Enter the question</string>
    <string name="give_the_answer">Give the answer</string>
    <string name="add_points">Add points</string>
    <string name="store">Store</string>
    <string name="cancel">Cancel</string>
    <string name="clear_texts">Clear texts</string>
    <string name="create_game1">Create Game</string>
    <string name="back">Back</string>
</resources>